--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border=1px solid black>
-		<caption><b>Student Details</b</caption>
+	<table border=1>
+		<caption>Student Details</caption>
 	<thead>
 		<th>NAME</th>
 		<th>AGE</th>
