--- a/main.html
+++ b/main.html
@@ -4,6 +4,13 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table{
+            background-color: yellow;
+            border: 1px solid black;
+        }
+        
+	</style>
 </head>
 
 <body>
